--- a/Nathan/permutation/index.html
+++ b/Nathan/permutation/index.html
@@ -3,70 +3,15 @@
 
 <head>
   <title>Permutations Notebook</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="experimental_circles.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
-  <style>
-    h1 {
-      text-align: center;
-    }
-
-    body {
-      background-color: #0099cc;
-    }
-
-    hr {
-      border-color: #007399;
-    }
-
-    #slider-output {
-      display: inline-block;
-    }
-
-    #perm-range-container {
-      width: 50%
-    }
-
-    #slider-output-container {
-      padding-top: 10px;
-    }
-
-    .slider {
-      display: inline-block;
-      -webkit-appearance: none;
-      /* Override default CSS styles */
-      appearance: none;
-      width: 100%;
-      /* Full-width */
-      height: 15px;
-      /* Specified height */
-      background: #d3d3d3;
-      /* Grey background */
-      outline: none;
-      /* Remove outline */
-      opacity: 0.7;
-      /* Set transparency (for mouse-over effects on hover) */
-      -webkit-transition: .2s;
-      /* 0.2 seconds transition on hover */
-      transition: opacity .2 border-radius: 5px;
-    }
-
-    .slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      background: #4CAF50;
-      cursor: pointer;
-    }
-
-    .slider::-moz-range-thumb {
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      background: #4CAF50;
-      cursor: pointer;
-    }
-  </style>
 </head>
 
 <body>
@@ -74,10 +19,9 @@
   <hr>
   <div id="experiment-full">
   </div>
-  <div id="experiment-fill">
-  </div>
   <div id="perm-range-container">
-    <input class="slider" id="perm-range-slider" type="range" min="2" max="10" value="5">
+    <input class="slider" id="perm-range-slider" type="range" min="2" max="10" value="5"><input id="reset-circles" type="button" value="Reset" onclick="resetCircles(this)">
+    <output for="circle-slider" onforminput="value = circle-slider.valueAsNumber;"></output>
   </div>
   <div id="slider-output-container">
     <p>Number of circles:
