added some formatting to experiment circles

--- a/Nathan/permutation/index.html
+++ b/Nathan/permutation/index.html
@@ -20,13 +20,11 @@
   <div id="experiment-full">
   </div>
   <div id="perm-range-container">
-    <input class="slider" id="perm-range-slider" type="range" min="2" max="10" value="5"><input id="reset-circles" type="button" value="Reset" onclick="resetCircles(this)">
-    <output for="circle-slider" onforminput="value = circle-slider.valueAsNumber;"></output>
+    <input class="slider" name="circle-slider" id="perm-range-slider" type="range" min="2" max="10" value="5" oninput="perm-range-output.value = perm-range-slider.value"><span id="slider-output"></span><br>
   </div>
-  <div id="slider-output-container">
-    <p>Number of circles:
-      <span id="slider-output"></span>
-    </p>
+  <div id="circles1-answer-container">
+    <p id="circles1-answer"></p>
+    <input id="reset-circles" type="button" value="Reset" onclick="resetCircles(this)">
   </div>
   <script src="circles.js"></script>
 </body>
