--- a/Nathan/permutation/index.html
+++ b/Nathan/permutation/index.html
@@ -20,7 +20,7 @@
   <div id="experiment-full">
   </div>
   <div id="perm-range-container">
-    <input class="slider" name="circle-slider" id="perm-range-slider" type="range" min="2" max="10" value="5"><span id="slider-output"></span><br>
+    <input class="slider" id="perm-range-slider" type="range" min="2" max="10" value="5"><span id="slider-output"></span><br>
   </div>
   <div id="circles1-answer-container">
     <p id="circles1-answer"></p>
@@ -29,7 +29,15 @@
   <div id="circles1-diff-permutations"> 
     <p id="diff-perm">How many different permutations can you make with the above circles? Think about it.</p>
   </div>
+  <div id="experiment-subset">
+  
+  </div>
+  <div id="perm-subset-range-container">
+      <input class="slider"  id="perm-fullsubset-range-slider" type="range" min="4" max="10" value="5"><span id="slider-fulloutput"></span><br>
+      <input class="slider"  id="perm-fillsubset-range-slider" type="range" min="2" max="4" value="3"><span id="slider-filloutput"></span><br>
+    </div>
   <script src="circles.js"></script>
+  <script src="circles_subset.js"></script>
 </body>
 
 </html>
