--- a/Nathan/permutation/index.html
+++ b/Nathan/permutation/index.html
@@ -33,8 +33,8 @@
   
   </div>
   <div id="perm-subset-range-container">
-      <input class="slider"  id="perm-fullsubset-range-slider" type="range" min="4" max="10" value="5"><span id="slider-fulloutput"></span><br>
-      <input class="slider"  id="perm-fillsubset-range-slider" type="range" min="2" max="4" value="3"><span id="slider-filloutput"></span><br>
+      <input class="slider"  id="perm-fullsubset-range-slider" type="range" min="4" max="10" value="5"><p id="slider-full-output"></p><br>
+      <input class="slider"  id="perm-fillsubset-range-slider" type="range" min="2" max="4" value="3"><p id="slider-fill-output"></p><br>
     </div>
   <script src="circles.js"></script>
   <script src="circles_subset.js"></script>
