styling made to the answer div

--- a/Nathan/permutation/index.html
+++ b/Nathan/permutation/index.html
@@ -35,6 +35,11 @@
   <div id="perm-subset-range-container">
       <input class="slider"  id="perm-fullsubset-range-slider" type="range" min="4" max="10" value="5"><p id="slider-full-output"></p><br>
       <input class="slider"  id="perm-fillsubset-range-slider" type="range" min="2" max="4" value="3"><p id="slider-fill-output"></p><br>
+  </div>
+  <div class="clear-float"></div>
+  <div id="circles-subset-answer-container">
+      <p id="circles-subset-answer"></p>
+      <input id="reset-circles-subset" type="button" value="Reset" onclick="resetCircles_subset(this)">
     </div>
   <script src="circles.js"></script>
   <script src="circles_subset.js"></script>
