circles changed to make allow for multiple of same circle. Added remove.

--- a/Nathan/permutation/index.html
+++ b/Nathan/permutation/index.html
@@ -27,6 +27,7 @@
     <p id="circles1-answer"></p>
     <input id="reset-circles" type="button" value="Reset" onclick="resetCircles(this)">
   </div>
+  <div class="clear-float"></div>
   <div id="circles1-diff-permutations"> 
     <p id="diff-perm">How many different permutations can you make with the above circles? Think about it.</p>
   </div>
