table is now working with additional  toggle features for solutions

--- a/Nathan/permutation/index.html
+++ b/Nathan/permutation/index.html
@@ -55,6 +55,7 @@
     <div id="table-button-container">
       <input id="submit-table-button" type="button" value="Submit Answers" onclick="showFeedback()">
       <input id="show-solutions-button" class="hidden" type="button" value="Show Solution" onclick="showTableSolution()">
+      <input id="unshow-solutions-button" class="hidden" type="button" value="Unshow Solutions" onclick="unshowTableSolution()">
     </div>
   </div>
   <div class="clear-float"></div>
